# msfabricutils

./: .gitignore  404.html  README.md  gen_ref_pages.py  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: build_and_release.yaml  ci.yaml  docs.yml
cli/: main.py
cli/commands/admin/: __init__.py
cli/commands/core/: __init__.py
common/fabric-duckdb-connection/: index.html
common/utilities/: index.html
core/authentication/: index.html
core/fabric-api/: index.html
core/fabric-api/capacity/: index.html
core/fabric-api/dashboard/: index.html
core/fabric-api/data_pipeline/: index.html
core/fabric-api/datamart/: index.html
core/fabric-api/environment/: index.html
core/fabric-api/eventhouse/: index.html
core/fabric-api/eventstream/: index.html
core/fabric-api/folder/: index.html
core/fabric-api/kql_dashboard/: index.html
core/fabric-api/kql_database/: index.html
core/fabric-api/kql_queryset/: index.html
core/fabric-api/lakehouse/: index.html
core/fabric-api/long_running_operation/: index.html
core/fabric-api/mirrored_database/: index.html
core/fabric-api/mirrored_warehouse/: index.html
core/fabric-api/ml_experiment/: index.html
core/fabric-api/ml_model/: index.html
core/fabric-api/notebook/: index.html
core/fabric-api/paginated_report/: index.html
core/fabric-api/reflex/: index.html
core/fabric-api/report/: index.html
core/fabric-api/semantic_model/: index.html
core/fabric-api/spark_job_definition/: index.html
core/fabric-api/sql_endpoint/: index.html
core/fabric-api/warehouse/: index.html
core/fabric-api/workspace/: index.html
docs/: index.md
docs/common/: fabric-duckdb-connection.md
docs/core/: authentication.md  fabric-api.md
docs/core/fabric-api/: capacity.md  dashboard.md  data_pipeline.md  datamart.md  environment.md  eventhouse.md  eventstream.md  folder.md  index.md  kql_dashboard.md  kql_database.md  kql_queryset.md  lakehouse.md  long_running_operation.md  mirrored_database.md  mirrored_warehouse.md  ml_experiment.md  ml_model.md  notebook.md  paginated_report.md  reflex.md  report.md  semantic_model.md  spark_job_definition.md  sql_endpoint.md  warehouse.md  workspace.md
docs/etl/: index.md  load.md  read.md  sinks.md  sources.md  transform.md  transforms.md
docs/other/: fabric-duckdb-connection.md  index.md  utilities.md
docs/usage/: cli.md  etl.md  fabric-api.md  installation.md
etl/: index.html
etl/load/: index.html
etl/read/: index.html
etl/sinks/: index.html
etl/sources/: index.html
etl/transform/: index.html
etl/transforms/: index.html
other/: index.html
other/fabric-duckdb-connection/: index.html
other/utilities/: index.html
reference/SUMMARY/: index.html
reference/msfabricutils/fabric_duckdb_connection/: index.html
scripts/cli/: Makefile  extract_method_signatures.py  generate_cli.py  generate_commands.py  sdk-funcs.yaml  validate_fabric_client_call.py
scripts/cli/commands/: capacity.yaml  dashboard.yaml  data_pipeline.yaml  datamart.yaml  environment.yaml  eventhouse.yaml  eventstream.yaml  folder.yaml  kql_dashboard.yaml  kql_database.yaml  kql_queryset.yaml  lakehouse.yaml  long_running_operation.yaml  mirrored_database.yaml  mirrored_warehouse.yaml  ml_experiment.yaml  ml_model.yaml  notebook.yaml  paginated_report.yaml  reflex.yaml  report.yaml  semantic_model.yaml  spark_job_definition.yaml  sql_endpoint.yaml  warehouse.yaml  workspace.yaml
scripts/cli/fabric_docs/: extract-navbar.md  extract_nav.py  navbar.html  tree_structure.yaml
search/: search_index.json
src/msfabricutils/: __init__.py  fabric_duckdb_connection.py
src/msfabricutils/cli/: cli.py  workspace.py
src/msfabricutils/common/: string_normalization.py
src/msfabricutils/core/: __init__.py  auth.py  generic.py  lakehouse.py  sql_endpoint.py  workspace.py
src/msfabricutils/etl/: __init__.py  config.py  flow.py
src/msfabricutils/helpers/: __init__.py  merge_helpers.py  separator_indices.py  string_normalization.py
src/msfabricutils/rest_api/: __init__.py  eventhouse.py  eventstream.py  folder.py  notebook.py  (+8 more)
tests/common/: test_quote_identifier.py  test_string_normalization.py
tests/etl/: test_end_to_end.py  test_flow.py  test_transforms.py
tests/helpers/: test_escape_object_name.py  test_merge_helpers.py  test_separator_indices.py  test_string_normalization.py
usage/cli/: index.html
usage/etl/: index.html
usage/fabric-api/: index.html
usage/installation/: index.html
(+418 files in other folders)
