[build-system]
requires = ["setuptools>=64", "wheel", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "msfabricutils"
dynamic = ["version"]
description = "A Python library exposes additional functionality to work with Python Notebooks in Microsoft Fabric."
authors = [
    { name = "Jimmy Jensen" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["fabric", "Microsoft", "duckdb", "deltalake"]
license.file = "LICENSE"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "azure-identity>=1.17.1",
    "duckdb>=1.2.0",
    "deltalake>=0.18.2",
    "sqlglot>=25.18",
    "polars>=1.6.0",
    "typer>=0.15.1",
]

[project.urls]
Repository = "https://github.com/mrjsj/msfabricutils"

[project.optional-dependencies]
docs = [
    "mkdocs==1.6.1",
    "mkdocs-material==9.5.47",
    "mkdocs-gen-files==0.5.0",
    "mkdocstrings-python",
    "mkdocs-include-dir-to-nav==1.2.0",
]
dev = [
    "pytest>=6.2.5",
    "ruff>=0.8.1",
    "freezegun>=1.5.1",
    "python-dotenv>=1.0.0",
]

[project.scripts]
msfu = "msfabricutils.cli.cli:main"

[tool.setuptools_scm]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = ["Q001", "I001"]

[tool.pytest.ini_options]
pythonpath = [
  "src",
]
addopts = "--ignore=tests/internal"